<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="id.ac.ui.cs.mobileprogramming.natasyameidianaakhda.savingco.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_tips"
        android:name="id.ac.ui.cs.mobileprogramming.natasyameidianaakhda.savingco.ui.tips.TipsFragment"
        android:label="@string/title_tips"
        tools:layout="@layout/fragment_tips" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="id.ac.ui.cs.mobileprogramming.natasyameidianaakhda.savingco.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>